--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,15 +35,27 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+
+  # NOTE Navigation
   go_router: ^14.1.4
   animations: ^2.0.11
   page_transition: ^2.1.0
-  riverpod: ^2.5.1
+
   flutter_riverpod: ^2.5.1
+
+  # NOTE API Client
+  retrofit: ^4.1.0
+  json_annotation: ^4.9.0
+  http: ^1.2.1
+
+  build_runner: ^2.4.9
+  flutter_dotenv: ^5.1.0
+  fpdart: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  retrofit_generator: ^8.1.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
