--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,8 +48,7 @@ dependencies:
   json_annotation: ^4.9.0
   http: ^1.2.1
 
-  build_runner: ^2.4.9
-  flutter_dotenv: ^5.1.0
+  # flutter_dotenv: ^5.1.0
   fpdart: ^1.1.0
   freezed_annotation: ^2.4.1
   flash: ^3.1.0
@@ -57,6 +56,8 @@ dependencies:
   dio: any
   riverpod: any
   fluttertoast: ^8.2.6
+  flutter_spinkit: ^5.2.1
+  build_runner: ^2.4.9
 dev_dependencies:
   flutter_test:
     sdk: flutter
