--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,13 +28,13 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cupertino_icons: ^1.0.2
+
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
 
   # NOTE Navigation
   go_router: ^14.1.4
@@ -48,7 +48,6 @@ dependencies:
   json_annotation: ^4.9.0
   http: ^1.2.1
 
-  # flutter_dotenv: ^5.1.0
   fpdart: ^1.1.0
   freezed_annotation: ^2.4.1
   flash: ^3.1.0
@@ -58,17 +57,19 @@ dependencies:
   fluttertoast: ^8.2.6
   flutter_spinkit: ^5.2.1
   build_runner: ^2.4.9
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^4.0.0
   retrofit_generator: ^8.1.0
+  pedantic_mono: any
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
