🪼 cd: formatting actions command

--- a/.github/workflows/flutter_lint.yaml
+++ b/.github/workflows/flutter_lint.yaml
@@ -33,7 +33,7 @@ jobs:
 
       # Verifies if the dart code is formatted well
       - name: Verify formatting
-        run: dart format $(find lib -name "*.dart" -not \( -name "*.*freezed.dart" -o -name "*.*g.dart" \) ) --set-exit-if-changed
+        run: dart format --output=none --set-exit-if-changed .
         # --set-exit-if-changed stops execution if the any code is not well formatted
         # --output=none prints files which needs to be formatted
 
