--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,16 +41,14 @@ dependencies:
   fluttertoast: ^8.2.6
   fpdart: ^1.1.0
   freezed_annotation: ^2.4.1
-
   go_router: ^14.1.4 # NOTE Navigation
   http: ^1.2.1
   json_annotation: ^4.9.0
   page_transition: ^2.1.0 # NOTE Navigation
-
   retrofit: ^4.1.0  # NOTE API Client
-
-
   riverpod: any
+  riverpod_annotation: ^2.3.5
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_lints: ^3.0.0
@@ -58,6 +56,7 @@ dev_dependencies:
     sdk: flutter
   pedantic_mono: any
   retrofit_generator: ^8.1.0
+  riverpod_generator: ^2.4.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
