--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   json_annotation: ^4.9.0
   just_audio: ^0.9.38
   page_transition: ^2.1.0 # NOTE Navigation
+  path_provider: ^2.1.3
+  record: ^5.1.1
   retrofit: ^4.1.0  # NOTE API Client
   riverpod: any
   riverpod_annotation: ^2.3.5
