--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  animated_custom_dropdown: ^3.1.1
   animations: ^2.0.11
   audio_waveforms: ^1.0.5
   build_runner: ^2.4.9
@@ -37,6 +38,7 @@ dependencies:
   flash: ^3.1.0
   flutter:
     sdk: flutter
+  flutter_datetime_picker_plus: ^2.2.0
   flutter_gen: ^5.5.0+1
   flutter_riverpod: ^2.5.1
   flutter_spinkit: ^5.2.1
