--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   riverpod: any
   riverpod_annotation: ^2.3.5
   shared_preferences: ^2.2.3
+  smooth_page_indicator: ^1.1.0
   speech_to_text: ^6.6.2
 
 dev_dependencies:
