--- a/.github/workflows/flutter_lint.yaml
+++ b/.github/workflows/flutter_lint.yaml
@@ -37,6 +37,7 @@ jobs:
         run: |
             touch ./lib/core/config.dart
             echo "const baseUrl = 'url here';" >> ./lib/core/config.dart
+            echo "const dummyAudioURL = 'url here';" >> ./lib/core/config.dart
             flutter pub run build_runner build
             dart analyze --fatal-infos
       # NOTE --set-exit-if-changed menas that if there's even an changed, the action will be failed
