--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,16 +40,20 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_gen: ^5.5.0+1
+  flutter_hooks: ^0.20.5
   flutter_riverpod: ^2.5.1
   flutter_spinkit: ^5.2.1
   flutter_svg: ^2.0.10+1
   fluttertoast: ^8.2.6
   fpdart: ^1.1.0
   freezed_annotation: ^2.4.1
+  gap: ^3.0.1
   go_router: ^14.1.4 # NOTE Navigation
+  hooks_riverpod: ^2.5.1
   http: ^1.2.1
   json_annotation: ^4.9.0
   just_audio: ^0.9.38
+  modal_bottom_sheet: ^3.0.0
   page_transition: ^2.1.0 # NOTE Navigation
   path_provider: ^2.1.3
   percent_indicator: ^4.2.3
