--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   riverpod: any
   riverpod_annotation: ^2.3.5
   shared_preferences: ^2.2.3
+  shimmer: ^3.0.0
   smooth_page_indicator: ^1.1.0
   speech_to_text: ^6.6.2
 
