📜 chore: add custom clippers package

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flash: ^3.1.0
   flutter:
     sdk: flutter
+  flutter_custom_clippers: ^2.1.0
   flutter_gen: ^5.5.0+1
   flutter_hooks: ^0.20.5
   flutter_riverpod: ^2.5.1
