--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,12 +68,19 @@ dependencies:
   speech_to_text: ^6.6.2
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.13.1
   flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
   pedantic_mono: any
   retrofit_generator: ^8.1.0
   riverpod_generator: ^2.4.0
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: 'assets/icon/volcano-icon-black.png'
+  remove_alpha_ios: true
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
