--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,10 +39,12 @@ dependencies:
   flash: ^3.1.0
   flutter:
     sdk: flutter
+  flutter_app_badger: ^1.5.0
   flutter_custom_clippers: ^2.1.0
   flutter_gen: ^5.5.0+1
   flutter_hooks: ^0.20.5
   flutter_local_notifications: ^17.2.2
+  flutter_native_timezone: ^2.0.0
   flutter_riverpod: ^2.5.1
   flutter_spinkit: ^5.2.1
   flutter_svg: ^2.0.10+1
